firewall/firewall.rules
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]

# Fix bad DHCP checksums (Is this still needed?)
-A POSTROUTING -o virbr0 -p udp -m udp --dport 68 -j CHECKSUM --checksum-fill

COMMIT

*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DNAT-git - [0:0]
:DNAT-mail - [0:0]
:DNAT-web - [0:0]
:SNAT-git - [0:0]
:SNAT-mail - [0:0]
:SNAT-web - [0:0]

# DNAT Rules for VMs
-A PREROUTING -d 176.9.48.29/32 -j DNAT-mail
-A PREROUTING -d 176.9.48.29/32 -j DNAT-web
-A PREROUTING -d 176.9.48.29/32 -j DNAT-git
-A OUTPUT -d 176.9.48.29/32 -j DNAT-mail
-A OUTPUT -d 176.9.48.29/32 -j DNAT-web
-A OUTPUT -d 176.9.48.29/32 -j DNAT-git

# SNAT Rules for VMs
-A POSTROUTING -s 192.168.100.7/32 -d 192.168.100.7/32 -j SNAT-web
-A POSTROUTING -s 192.168.100.8/32 -d 192.168.100.8/32 -j SNAT-git
-A POSTROUTING -s 192.168.100.9/32 -d 192.168.100.9/32 -j SNAT-mail

# Broadcast addresses
-A POSTROUTING -s 192.168.100.0/24 -d 224.0.0.0/24 -o eth0 -j RETURN
-A POSTROUTING -s 192.168.100.0/24 -d 255.255.255.255/32 -o eth0 -j RETURN

# Masquerade packages going from vnet -> outside
-A POSTROUTING -s 192.168.100.0/24 ! -d 192.168.100.0/24 -o eth0 -p tcp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.100.0/24 ! -d 192.168.100.0/24 -o eth0 -p udp -j MASQUERADE --to-ports 1024-65535
-A POSTROUTING -s 192.168.100.0/24 ! -d 192.168.100.0/24 -o eth0 -j MASQUERADE

# web.vm
-A DNAT-web -d 176.9.48.29/32 -p tcp -m tcp --dport 80 -j DNAT --to-destination 192.168.100.7:80
-A DNAT-web -d 176.9.48.29/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 192.168.100.7:443
-A SNAT-web -s 192.168.100.7/32 -d 192.168.100.7/32 -p tcp -m tcp --dport 80 -j MASQUERADE
-A SNAT-web -s 192.168.100.7/32 -d 192.168.100.7/32 -p tcp -m tcp --dport 443 -j MASQUERADE

# git.vm
-A DNAT-git -d 176.9.48.29/32 -p tcp -m tcp --dport 2202 -j DNAT --to-destination 192.168.100.8:2202
-A DNAT-git -d 176.9.48.29/32 -p tcp -m tcp --dport 3000 -j DNAT --to-destination 192.168.100.8:3000
-A SNAT-git -s 192.168.100.8/32 -d 192.168.100.8/32 -p tcp -m tcp --dport 2202 -j MASQUERADE
-A SNAT-git -s 192.168.100.8/32 -d 192.168.100.8/32 -p tcp -m tcp --dport 3000 -j MASQUERADE

# mail.vm
-A DNAT-mail -d 176.9.48.29/32 -p tcp -m tcp --dport 25 -j DNAT --to-destination 192.168.100.9:25
-A DNAT-mail -d 176.9.48.29/32 -p tcp -m tcp --dport 587 -j DNAT --to-destination 192.168.100.9:587
-A DNAT-mail -d 176.9.48.29/32 -p tcp -m tcp --dport 143 -j DNAT --to-destination 192.168.100.9:143
-A DNAT-mail -d 176.9.48.29/32 -p tcp -m tcp --dport 4190 -j DNAT --to-destination 192.168.100.9:4190
-A SNAT-mail -s 192.168.100.9/32 -d 192.168.100.9/32 -p tcp -m tcp --dport 25 -j MASQUERADE
-A SNAT-mail -s 192.168.100.9/32 -d 192.168.100.9/32 -p tcp -m tcp --dport 587 -j MASQUERADE
-A SNAT-mail -s 192.168.100.9/32 -d 192.168.100.9/32 -p tcp -m tcp --dport 143 -j MASQUERADE
-A SNAT-mail -s 192.168.100.9/32 -d 192.168.100.9/32 -p tcp -m tcp --dport 4190 -j MASQUERADE

COMMIT
